auditlogs creating and updating works
